content/nomad/v0.12.x/content/docs/commands/license/get.mdx
---
layout: docs
page_title: 'Commands: license get'
sidebar_title: get
description: |
  The license get command is used to get the current license.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# Command: license get

The `license get` command is used to retrieve the current Nomad Enterprise license.

~> License commands are new in Nomad 0.12.0 and are only available with Nomad
Enterprise.

## Usage

```plaintext
nomad license get [options]
```

## General Options

@include 'general_options.mdx'

## Examples

```shell-session
$ nomad license get

Product        = nomad
License Status = valid
License ID     = e23f63b1-00ec-4e67-e926-c22e7937ceec
Customer ID    = 350356e5-8aec-bdf4-8510-b205079ccad2
Expires At     = 2020-05-09 00:00:00 +0000 UTC
License ID     = e23f63b1-00ec-4e67-e926-c22e7937ceec
Customer ID    = 350356e5-8aec-bdf4-8510-b205079ccad2
Terminates At  = 2020-05-10 00:00:00 +0000 UTC
Datacenter     = *
Modules:
        governance-policy
Licensed Features:
        Automated Upgrades
        Enhanced Read Scalability
        Redundancy Zones
        Namespaces
        Resource Quotas
        Preemption
        Audit Logging
        Setinel Policies
```
